[WinCairo] Incorrect line-height for styled menulist (select tag) in windows theme. https://bugs.webkit.org/show_bug.cgi?id=79435

Patch by Lynn Neir <lynn.neir@skype.net> on 2012-11-14
Reviewed by Brent Fulgham

Applied same fix as in RenderThemeSafari::adjustMenuListButtonStyle
to Windows theme to fix issue.

Tests: fast/forms/menulist-restrict-line-height.html
       fast/forms/control-restrict-line-height.html
       fast/forms/basic-selects.html

* rendering/RenderThemeWin.cpp:
(WebCore::RenderThemeWin::adjustMenuListButtonStyle): Set line
height to the correct initial height.


Canonical link: https://commits.webkit.org/120381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134657 268f45cc-cd09-0410-ab3c-d52691b4dbfc